# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Export wasm lib to js context by wasm-pack and wasm-bindgen"
repository = "https://github.com/panlw/wasm-vite/tree/main/wasm-lib"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
